syntax = "proto3";

package issue;

service IssueService {
    rpc CreateIssue (CreateIssueRequest) returns (CreateIssueResponse);
    rpc GetIssue (GetIssueRequest) returns (GetIssueResponse);
    rpc UpdateIssue (UpdateIssueRequest) returns (UpdateIssueResponse);
    rpc AssignIssue (AssignIssueRequest) returns (AssignIssueResponse);
    rpc ListIssuesByUser (ListIssuesRequest) returns (ListIssuesResponse);
    rpc ListIssues (ListIssuesRequest) returns (ListIssuesResponse);
}

enum StatusEnum {
    NEW = 0;
    ACK = 1;
    RESOLVED = 2;
    CLOSED = 3;
    PENDING = 4;
}

enum UrgencyEnum {
    LOW = 0;
    MEDIUM = 1;
    HIGH = 2;
}

enum ImpactEnum {
    LOW = 0;
    MEDIUM = 1;
    HIGH = 2;
}

message UpdateIssueRequest {
    string issueId = 1;
    string title = 2;
    string description = 3;
    StatusEnum status = 4;
    UrgencyEnum urgency = 5;
    ImpactEnum impact = 6;
    string priority = 7;
}

message UpdateIssueResponse {
    string message = 1;
    string issueId = 2;
    string status = 3;
}

message CreateIssueRequest{
    string title = 1;
    string description = 2;
    UrgencyEnum urgency = 3;
    ImpactEnum impact = 4;
}

message CreateIssueResponse {
    string message = 1;
    string issueId = 2;
}

message GetIssueRequest {
    string issueId = 1;
}

message GetIssueResponse {
    Issue Issue = 1;
    string message = 2;
}

message Issue {
    string issue_id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string urgency = 5;
    string impact = 6;
    string created_by = 7;
    string admin_id = 8;
    string created_at = 9;
    string updated_at = 10;
    string priority = 11;
}

message ListIssuesRequest{}

message IssueShort {
    string issue_id = 1;
    string title = 2;
    string status = 3;
    string priority = 4;
    string impact = 5;
    string created_by = 6;
    string created_at = 7;
}

message ListIssuesResponse {
    repeated IssueShort issues = 1;
    string message = 2;
}

message AssignIssueRequest {
    string issueId = 1;
}

message AssignIssueResponse {
    string message = 1;
    string status = 2;
    string issueId = 3;
}



